# hikma-health-backend

./: .coveragerc  .env.example  .gitignore  .ignore  CONTRIBUTING.md  README.md  app.py  azure.yaml  cloudbuild.yaml  config.py  pyproject.toml  pytest.ini  pywsgi.py  render.yaml  requirements.txt  startup.sh
.do/: app.yaml  deploy.template.yaml
.github/workflows/: ci.yaml  master_dotw-hikma.yml  python-test.yaml
admin_api/: admin_api.py  patient_data_import.py
app/: .gitignore  README.md  app.yaml  config.py  db_util.py  hikmahealthappkubernetes-dce6920c6f10.json  hikmahealthappkubernetes-dce6920c6f10.json.enc  main.py  pywsgi.py  requirements.txt  run.sh  run_migrations.sh
app/admin_api/: admin_api.py  patient_data_export.py  patient_data_import.py  single_patient_data_export.py
app/clinics/: clinic.py
app/data/: base_export.xlsx
app/events/: data_access.py  event.py  event_export.py
app/mobile_api/: mobile_api.py  sync_utils.py
app/patients/: data_access.py  patient.py
app/photos/: photo_storage.py
app/test_api/: test_api.py
app/users/: data_access.py  user.py
clinics/: clinic.py  data_access.py
events/: data_access.py  event.py
hikima/__tests__/: README.md
hikima/entity/: concept.py
hikima/server/: app.py  config.py  routes_admin.py  routes_mobile.py
hikma/entity/: base.py
hikma/server/: routes_mobile.py  server.py  sync.py
hikmahealth/: keeper.py
hikmahealth/entity/: base.py  concept.py  core.py  fields.py  helpers.py  hh.py  sync.py
hikmahealth/server/: config.py  custom_routes_admin.py  routes_admin.py  routes_admin_configuration.py  routes_admin_storage.py  routes_mobile.py  server.py  sync.py  test_routes.py
hikmahealth/storage/: client.py  errors.py  objects.py
hikmahealth/sync/: __init__.py  data.py  errors.py  operation.py
hikmahealth/utils/: code.py  data.py  datetime.py  errors.py  misc.py  textparse.py
infra/: resources.bicep
language_strings/: data_access.py  individual_language_string.py
migrations/: alembic.ini  env.py
migrations/versions/: 0fa5767e5e64_increase_sex_text_length.py  18edc29dd7fd_include_healthcare_provider_segmentation.py  19c8d4aed7fa_restoring_patient_attribute_indices_and_.py  47dc360e825a_initial_tables.py  602ce80e2a7b_extend_patient_and_attributes.py  657ba64ed784_create_initial_user.py  80e8c595e01e_adding_support_for_appointments.py  86ebf93a362c_make_resources_syncable.py  90b1fbe863b7_creating_server_variable_table.py  a93b05fad7db_migration_patient_attribute_ids_to_be_.py  (+3 more)
mobile_api/: mobile_api.py
oldhikma/: app.py  client_object.py  code.py  config.py  db_util.py  web_util.py
patients/: data_access.py  patient.py
scripts/: add_demo_clinic.py  add_demo_patients.py  run.sh
sync/: data_access.py  db_sychronization.py
tests/: conftest.py
users/: data_access.py
visits/: data_access.py  visit.py
(+56 files in other folders)
