[project]
name = "hikima-server"
version = "0.1.0"
description = "The first free mobile health data system for physicians serving refugees."
license = "MIT License"
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools", "wheel"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
# 'extend-exclude' excludes files or directories in addition to the defaults
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  oldhikma/\.    # exclude everything in oldhikma
  venv/\.
)
'''

[tool.pyright]
include = ["hikmahealth", "tests", "migrations", "app.py"]
exclude = ["**/venv", "**/__pycache__", "src/experimental", "src/typestubs"]
ignore = ["oldhikma"]
defineConstant = { DEBUG = true }

reportMissingImports = "error"
reportMissingTypeStubs = false
reportIncompatibleMethodOverride = false

pythonVersion = "3.12"
