[project]
name = "hikima-server"
version = "0.1.0"
description = "The first free mobile health data system for physicians serving refugees."
license = "MIT License"
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools", "wheel"]

[tool.ruff]
src = ["hikmahealth", "migrations"]
extend-exclude = ["oldhikma", "venv"]
extend-include = ["pywsgi.py", "app.py"]
line-length = 88
fix = true

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
preview = true

[tool.ruff.lint]
exclude = ["tests"]

[tool.pyright]
include = ["hikmahealth", "tests", "migrations", "app.py", "pywsgi.py"]
exclude = ["**/venv", "**/__pycache__", "tests", "oldhikma"]
ignore = ["oldhikma"]
defineConstant = { DEBUG = true }

reportMissingImports = "error"
reportMissingTypeStubs = false
reportIncompatibleMethodOverride = false

pythonVersion = "3.12"
